# myStock

./: .coverage  .env.example  .env.sample  .gitattributes  README.md  config.yaml  database_manager.py  debug_frontend_api.html  frontend_api_test.html  main.py  memory:  performance_analysis.py  pyproject.toml  pytest.ini  real_data_config.py  requirements.txt  start.bat  start.sh  start_full_system.py  start_realdata.sh  start_with_realdata.py  test_frontend_api.js  test_frontend_backend.js  test_frontend_complete.js  test_frontend_fix.html  verify_data_fix.py
.claude/: settings.local.json
.claude/agents/: aesthetic-frontend-engineer.md  tdd-backend-developer.md
.kiro/hooks/: python-venv-monitor.kiro.hook
.serena/: project.yml
.serena/memories/: cleanup_backup_record.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
config/: development.yaml  monolith_config.yaml
data/: myquant.db  myquant_dev.db
docs/: DEVELOPMENT_GUIDELINES.md  MIGRATION_GUIDE.md  MONOLITH_ARCHITECTURE.md  README.md  detailed-design-document.md
docs/api/: core-api.md  strategy-development.md
docs/tutorials/: first-strategy.md
docs/user-guide/: quick-start.md
examples/: activity_analysis_demo.py  enhanced_data_demo.py  enhanced_strategy_demo.py  high_frequency_trading_demo.py  market_time_demo.py  risk_management_demo.py
frontend/: .dockerignore  .env  .env.example  .env.prod  .env.production  .env.staging  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  nginx.conf  nginx.prod.conf  package-lock.json  package.json  ssl.conf  tsconfig.app.json  vite.config.ts
frontend-web-interface/docs/: api-compatibility-analysis.md  api-compatibility-summary.md  api-integration-test-report.md  ci-cd-integration-guide.md
frontend/.claude/: settings.local.json
frontend/config/: environments.js
frontend/docs/: DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  USER_MANUAL.md
frontend/monitoring/: prometheus.yml
frontend/public/: api_test.html
frontend/scripts/: build-prod.sh  deploy.sh
frontend/src/: App.tsx  index.css  main.tsx
myQuant/: .env.example  __init__.py  main.py  pytest.ini
myQuant/analysis/: __init__.py
myQuant/application/: __init__.py  factory.py
myQuant/config/: __init__.py  config_loader.py  data_sources.py  monolith_config.py  settings.py
myQuant/core/: __init__.py  backtest_engine.py  data_manager.py  enhanced_trading_system.py  exceptions.py  (+5 more)
tests/: base_test.py  conftest.py
(+428 files in other folders)
