[project]
name = "mystock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aioredis>=2.0.1",
    "aiosignal==1.4.0",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==6.1.0",
    "certifi==2025.7.9",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "contourpy==1.3.2",
    "coverage==7.9.2",
    "cycler==0.12.1",
    "dependency-injector>=4.48.1",
    "fastapi==0.116.1",
    "fonttools==4.58.5",
    "frozenlist==1.7.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "h11==0.16.0",
    "h5py==3.14.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jwt>=1.4.0",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "multidict==6.6.3",
    "narwhals==1.46.0",
    "numpy>=1.24.0,<2.3.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "pip==25.1.1",
    "plotly==6.2.0",
    "pluggy==1.6.0",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis==6.2.0",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rpds-py==0.26.0",
    "scipy==1.16.0",
    "seaborn>=0.13.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "starlette==0.47.1",
    "streamlit==1.46.1",
    "ta-lib==0.6.4",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tornado==6.5.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "yarl==1.20.1",
    "yfinance>=0.2.65",
    "scikit-learn>=1.3.0",
    "numba>=0.61.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "reportlab>=4.0.0",
    "influxdb-client>=1.36.0",
    "joblib>=1.3.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
]
